@@ -1,6 +1,8 @@
 package org.nmrfx.processor.gui;
 
 import javafx.scene.Cursor;
+import javafx.scene.layout.ColumnConstraints;
+import javafx.scene.layout.RowConstraints;
 import javafx.scene.paint.Color;
 import javafx.stage.Stage;
 import org.nmrfx.analyst.gui.AnalystApp;
@@ -18,7 +20,9 @@ import org.nmrfx.utils.GUIUtils;
 import org.nmrfx.utils.properties.ColorProperty;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
+import org.yaml.snakeyaml.constructor.Constructor;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
@@ -216,6 +220,38 @@ public class GUIScripter {
         return result;
     }
 
+
+
+    public Map<String, List<Map<String, Double>>> gridConf(FXMLController controller) {
+        int nRows = controller.arrangeGetRows();
+        int nColumns = controller.arrangeGetColumns();
+        GridPaneCanvas gridPaneCanvas = controller.getGridPaneCanvas();
+        var columnConstraints = gridPaneCanvas.getColumnConstraints();
+        Map<String, List<Map<String, Double>>> result = new HashMap<>();
+        List<Map<String, Double>> columnResult = new ArrayList<>();
+        for (int i=0;i<Math.min(nColumns, columnConstraints.size());i++) {
+            ColumnConstraints columnConstraint = columnConstraints.get(i);
+            Double percent = columnConstraint.getPercentWidth();
+            Map<String, Double> parMap = new HashMap<>();
+            percent = percent < 0 ? 100.0 : percent;
+            parMap.put("percent", percent);
+            columnResult.add(parMap);
+        }
+        var rowConstraints = gridPaneCanvas.getRowConstraints();
+        List<Map<String, Double>> rowResult = new ArrayList<>();
+        for (int i=0;i<Math.min(nRows, rowConstraints.size());i++) {
+            RowConstraints rowConstraint = rowConstraints.get(i);
+            Double percent = rowConstraint.getPercentHeight();
+            Map<String, Double> parMap = new HashMap<>();
+            percent = percent == null ? 100.0 : percent;
+            parMap.put("percent", percent);
+            rowResult.add(parMap);
+        }
+        result.put("column", columnResult);
+        result.put("row", rowResult);
+        return result;
+    }
+
     public void draw() {
         Fx.runOnFxThread(() -> {
             PolyChart chart = getChart();
@@ -289,7 +325,7 @@ public class GUIScripter {
                 }
             }
             if (!indices.isEmpty()) {
-                chart.getFXMLController().getStatusBar().updateRowSpinner(indices.get(0), 1);
+                chart.getFXMLController().getStatusBar().updateRowSpinner(indices.getFirst(), 1);
             }
             chart.refresh();
         });
@@ -335,7 +371,7 @@ public class GUIScripter {
     public Map<String, Object> config(List<String> datasetNames) throws InterruptedException, ExecutionException {
         final String datasetName;
         if ((datasetNames != null) && !datasetNames.isEmpty()) {
-            datasetName = datasetNames.get(0);
+            datasetName = datasetNames.getFirst();
         } else {
             datasetName = null;
         }
@@ -392,10 +428,20 @@ public class GUIScripter {
         }
     }
 
+    public void setProjectionOnFx(PolyChart chart, String datasetName, String viewModeString) {
+        List<DatasetAttributes> dataAttrs = chart.getDatasetAttributes();
+        for (DatasetAttributes dataAttr : dataAttrs) {
+            if ((datasetName == null) || dataAttr.getFileName().equals(datasetName)) {
+                Dataset.ProjectionMode viewMode = Dataset.ProjectionMode.valueOf(viewModeString);
+                dataAttr.getDataset().projectionViewMode(viewMode);
+                break;
+            }
+        }
+    }
     public Map<String, Object> pconfig(List<String> peakListNames) throws InterruptedException, ExecutionException {
         final String peakListName;
         if ((peakListNames != null) && !peakListNames.isEmpty()) {
-            peakListName = peakListNames.get(0);
+            peakListName = peakListNames.getFirst();
         } else {
             peakListName = null;
         }
@@ -507,7 +553,7 @@ public class GUIScripter {
 
     public void loadAnnotationsOnFx(PolyChart chart, String yamlData) {
         try (InputStream stream = new ByteArrayInputStream(yamlData.getBytes())) {
-            Yaml yaml = new Yaml();
+            Yaml yaml = getYamlReader();
             List<CanvasAnnotation> annoTypes = (List<CanvasAnnotation>) yaml.load(stream);
             for (CanvasAnnotation annoType : annoTypes) {
                 chart.addAnnotation(annoType);
@@ -534,7 +580,7 @@ public class GUIScripter {
     public void newStage(String title) {
         Fx.runOnFxThread(() -> {
             FXMLController controller = AnalystApp.getFXMLControllerManager().newController(title);
-            PolyChart chartActive = controller.getCharts().get(0);
+            PolyChart chartActive = controller.getCharts().getFirst();
             controller.setActiveChart(chartActive);
         });
     }
@@ -565,13 +611,53 @@ public class GUIScripter {
         controller.draw();
     }
 
+    public void gridOnFx(FXMLController controller, Map<String, List<Map<String, Double>>> gridConf) {
+        var columConf = gridConf.get("column");
+        GridPaneCanvas gridPaneCanvas = controller.getGridPaneCanvas();
+        var columnConstraints = gridPaneCanvas.getColumnConstraints();
+        if (columConf != null) {
+            int column = 0;
+            for (var conf : columConf) {
+                Double percent = conf.get("percent");
+                percent = percent == null ? 100.0 : percent;
+                ColumnConstraints columnConstraint;
+                if (column < columnConstraints.size()) {
+                    columnConstraint = columnConstraints.get(column);
+                } else {
+                    columnConstraint = new ColumnConstraints();
+                    columnConstraints.add(columnConstraint);
+                }
+                columnConstraint.setPercentWidth(percent);
+                column++;
+            }
+        }
+        var rowConf = gridConf.get("row");
+        var rowConstraints = gridPaneCanvas.getRowConstraints();
+        if (rowConf != null) {
+            int row = 0;
+            for (var conf : rowConf) {
+                Double percent = conf.get("percent");
+                percent = percent == null ? 100.0 : percent;
+                RowConstraints rowConstraint;
+                if (row < rowConstraints.size()) {
+                    rowConstraint = rowConstraints.get(row);
+                } else {
+                    rowConstraint = new RowConstraints();
+                    rowConstraints.add(rowConstraint);
+                }
+                rowConstraint.setPercentHeight(percent);
+                row++;
+            }
+        }
+    }
+
     public void grid(int nCharts, String orientName) {
         GridPaneCanvas.ORIENTATION orient = GridPaneCanvas.parseOrientationFromString(orientName);
         Fx.runOnFxThread(() -> {
             FXMLController controller1 = getActiveController();
             controller1.setNCharts(nCharts);
             controller1.arrange(orient);
-            PolyChart chartActive = controller1.getCharts().get(0);
+            PolyChart chartActive = controller1.getCharts().getFirst();
             controller1.setActiveChart(chartActive);
             controller1.setChartDisable(false);
             controller1.draw();
@@ -609,6 +695,23 @@ public class GUIScripter {
             controller1.draw();
         });
     }
+
+    public void gridcolumn(int column, double percent) {
+        Fx.runOnFxThread(() -> {
+            FXMLController controller1 = getActiveController();
+            GridPaneCanvas gridPaneCanvas = controller1.getGridPaneCanvas();
+            gridPaneCanvas.gridColumn(column, percent);
+        });
+    }
+
+    public void gridrow(int row, double percent) {
+        Fx.runOnFxThread(() -> {
+            FXMLController controller1 = getActiveController();
+            GridPaneCanvas gridPaneCanvas = controller1.getGridPaneCanvas();
+            gridPaneCanvas.gridRow(row, percent);
+        });
+    }
+
     public void insetPosition(PolyChart chart, Double x, Double y, Double w, Double h) {
         Fx.runOnFxThread(() -> {
             FXMLController controller1 = getActiveController();
@@ -628,18 +731,18 @@ public class GUIScripter {
         });
     }
 
-    public List<String> datasets() throws InterruptedException, ExecutionException {
+    public List<String> datasetNames() throws InterruptedException, ExecutionException {
         return Fx.runOnFxThreadAndWait(() -> {
             PolyChart chart = getChart();
             List<DatasetAttributes> dataAttrs = chart.getDatasetAttributes();
-            return dataAttrs.stream().map(DatasetAttributes::getFileName).toList();
+            return dataAttrs.stream().map(dataAttr -> dataAttr.getDataset().getName()).toList();
         });
     }
 
-    public void datasets(String datasetName) {
+    public void datasetNames(String datasetName) {
         List<String> datasetNames = new ArrayList<>();
         datasetNames.add(datasetName);
-        datasets(datasetNames);
+        datasetNames(datasetNames);
     }
 
     public void addDataset(Dataset dataset) {
@@ -656,8 +759,11 @@ public class GUIScripter {
         });
     }
 
-    public void datasets(List<String> datasetNames) {
+    public void datasetNames(List<String> datasetNames) {
         Fx.runOnFxThread(() -> getChart().updateDatasetsByNames(datasetNames));
+    }
+    public void datasets(List<Dataset> datasets) {
+        Fx.runOnFxThread(() -> getChart().updateDatasets(datasets));
     }
 
     public void gridDatasets(List<String> datasetNames) {
@@ -904,4 +1010,19 @@ public class GUIScripter {
         });
     }
 
+    public static Yaml getYamlReader() {
+        LoaderOptions opts = new LoaderOptions();
+        opts.setTagInspector(tag -> {
+            String className = tag.getClassName();
+            return className != null
+                    && (
+                    className.startsWith("org.nmrfx.processor.gui.annotations.")
+                            || className.startsWith("org.nmrfx.analyst.gui.annotations.")
+                            || className.startsWith("org.nmrfx.analyst.gui.molecule.CanvasMolecule")
+            );
+        });
+
+        Constructor constructor = new Constructor(Object.class, opts);
+        return new Yaml(constructor);
+    }
 }
